fix Aurora CargoBay1 Portal issue

--- a/sources/TODO.txt
+++ b/sources/TODO.txt
@@ -2,14 +2,14 @@ Big thanks to Ouch, Rick Hunter, Invictus and Insomniac_GamerTV for map testing!
 Big thanks to Xcalibur and Plotting-Racoon for further map testing on R01!
 Big Thanks to Asgard, Sabitsuki, OptimusShr, GuardianDragon
 
-1. update 'sources' with updated flographs and pics where applicable
+1. Update 'sources' with updated flographs and pics where applicable
 2. playtest: are teleports still prone to breakage (why?)
-3. Post playtest: Make team discrimination via playerID work in "Take me home" area
-4. Post playtest: Fix that one vanir visarea and portal issue
-5. Post playtest: Remake endless storage area and cull all the offending objects
-6. there are more bodies protruding the top level - find them!
-7. make one (two?) more belt(s) around each dropship to contain misses
-8. try address seams on the white liquid zone
+3. Make team discrimination via playerID work in "Take me home" area
+4. Fix that one vanir visarea and portal issue
+5. Remake endless storage area and cull all the offending objects
+6. There are more bodies protruding the top level - find them!
+7. Make one (two?) more belt(s) around each dropship to contain misses?
+8. Try address seams on the white liquid zone
 9. K-F core front coil on upper coil disapears on certain angles
-10. try occlude fog areas that shine thru as black patches
-11. make more navigation clues across the map
+10. Try occlude fog areas that shine thru as black patches
+11. Make more navigation clues across the map
