Fixed dark areas far away still show in white fog zones

--- a/sources/TODO.txt
+++ b/sources/TODO.txt
@@ -2,11 +2,10 @@ Big thanks to Ouch, Rick Hunter, Invictus and Insomniac_GamerTV for map testing!
 Big thanks to Xcalibur and Plotting-Racoon for further map testing on R01!
 Big Thanks to Asgard, Sabitsuki, OptimusShr, GuardianDragon
 
+0. Update the minmaps
 1. Update 'sources' with updated flographs and pics where applicable
 2. playtest: are teleports still prone to breakage (why?)
-3. Make one (two?) more belt(s) around each dropship to contain misses?
-4. Make team discrimination via playerID work in "Take me home" area
-5. Fix that one vanir visarea and portal issue
-6. Try address seams on the white liquid zone
-7. K-F core front coil on upper coil disapears on certain angles
-8. Try occlude fog areas that shine thru as black patches
+3. playtest: Make one (two?) more belt(s) around each dropship to contain misses?
+4. Fix that one vanir visarea and portal issue
+5. Try address seams on the white liquid zone
+6. K-F core front coil on upper coil disapears on certain angles
